# diffst

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  audit.md  clean_readme.md  impl.md  lib.typ  plugin.wasm  previous-audit-fix.md  typst.toml
examples/: algorithms.typ  basic.typ  custom-colors.typ  manual-layout.typ  minimal-table.typ  new.typ  old.typ  paper-new.typ  partial-report.typ  realistic.typ  show-rules.typ  side-by-side-copy-toy.typ  table-text-toy.typ
examples/algorithm-cases/: duplicates-new.typ  histogram-new.typ  histogram-old.typ
examples/diffs/: algorithm-histogram.typ  algorithm-hunt.typ  algorithm-lcs.typ  algorithm-myers.typ  algorithm-patience.typ  basic.typ  collapse-threshold.typ  context-lines.typ  custom-colors.typ  debug.typ  display-collapsed.typ  display-full.typ  git-b8ccbd3-cece06a.typ  git-cece06a-8b48d70.typ  hunks.typ  ignore-whitespace.typ  inline-chars.typ  inline-none.typ  inline-words.typ  long-lines.typ  manual-layout.typ  minimal-table.typ  partial-report.typ  realistic.typ  semantic-cleanup.typ  show-rules.typ  show-whitespace.typ  table-layout.typ  trailing-newline.typ  trailing-whitespace.typ  unicode.typ
examples/option-cases/: inline-new.txt  inline-old.txt  long-lines-new.txt  semantic-new.txt  trailing-whitespace-new.txt  trailing-whitespace-old.txt  unicode-old.txt
examples/options/: algorithm-histogram.typ  algorithm-hunt.typ  debug.typ  (+20 more)
python/: git-diff.py
scripts/: failure-smoke.sh  local-package-smoke.sh  package-pr.py  path-resolution-smoke.sh  smoke.sh
src/: lib.rs  tests.rs
typst/: report.typ
(+17 files in other folders)
